maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:35: error: value North is not a member of object plm.universe.Direction
  while (getDirection() != Direction.North) left();
                                     ^